[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/Boss.gd" type="Script" id=1]
[ext_resource path="res://sprites/characters/jefazo_ala_izq.png" type="Texture" id=2]
[ext_resource path="res://sprites/characters/jefazo.png" type="Texture" id=3]
[ext_resource path="res://sprites/characters/jefazo_ala_dere.png" type="Texture" id=4]
[ext_resource path="res://sprites/characters/gradienteblanco.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 110, 130 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 13.3682, 42.6654 )

[sub_resource type="Animation" id=3]

resource_name = "StandFly"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -90, 0 ), Vector2( -90, 77.23 ), Vector2( -90, 0 ) ]
}

[node name="Boss" type="Node2D"]
position = Vector2( 370.954, 316.453 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -90, 50.932 )
shape = SubResource( 1 )
disabled = true

[node name="AlaIzquierdaOrigen" type="Node2D" parent="CollisionShape2D"]
editor/display_folded = true
position = Vector2( -43.9519, -59.7745 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D/AlaIzquierdaOrigen"]
position = Vector2( -56.2584, -66.8068 )
texture = ExtResource( 2 )

[node name="Boss" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 90, 0 )
texture = ExtResource( 3 )

[node name="AlaDerechaOrigen" type="Node2D" parent="CollisionShape2D"]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="CollisionShape2D/AlaDerechaOrigen"]
position = Vector2( -98.4521, -103.726 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="CollisionShape2D"]
position = Vector2( 99.046, 0 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/Area2D"]
position = Vector2( -90, 22.615 )
scale = Vector2( 7.36, 4.24 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="CollisionShape2D"]
scale = Vector2( 4.12697, 4.12697 )
texture = ExtResource( 5 )
color = Color( 1, 0.223529, 0.223529, 1 )
shadow_enabled = true
shadow_buffer_size = 512

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/StandFly = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="CollisionShape2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
